--- a/prezka.Rmd
+++ b/prezka.Rmd
@@ -23,7 +23,7 @@ source("./code/0-orchestrace.R")
 
 --
 
-## Optimizace distribuční sítě - bary v Praze (záminka)
+## Optimizace distribuční sítě – bary v Praze (záminka)
 
 --
 
@@ -79,84 +79,84 @@ source("./code/0-orchestrace.R")
 
 --
 
-### Populace po městských částech - [otevřená data ČSÚ](https://www.czso.cz/csu/czso/otevrena_data)
+### Populace po městských částech – [otevřená data ČSÚ](https://www.czso.cz/csu/czso/otevrena_data)
 
 --
 
-### Hotelová lůžka po městských částech - [otevřená data ČSÚ](https://www.czso.cz/csu/czso/otevrena_data)
+### Hotelová lůžka po městských částech – [otevřená data ČSÚ](https://www.czso.cz/csu/czso/otevrena_data)
 
 --
 
-### Souřadnice stanic metra - [Open Data hl. m. Prahy](http://opendata.praha.eu/dataset/ipr-prazska_integrovana_doprava_-_vstupy_do_metra)
+### Souřadnice stanic metra – [Open Data hl. m. Prahy](http://opendata.praha.eu/dataset/ipr-prazska_integrovana_doprava_-_vstupy_do_metra)
 
 --
 
-### Satelitní snímkování - [Copernicus / Sentinel](http://copernicus.gov.cz/pristup-k-datum) za 30. červen 2018
+### Satelitní snímkování – [Copernicus / Sentinel](http://copernicus.gov.cz/pristup-k-datum) za 30. červen 2018
 
 ---
-# Společný jmenovatel - mřížka (grid)
+# Společný jmenovatel – mřížka (grid)
 --
 ```{r grid, echo = F, cache = T, out.width = '85%', fig.align="left", fig.asp = 0.55, dpi = 150}
 plot_grid_empty
 ```
 
 ---
-# Přehled barů - body
+# Přehled barů – body
 --
 ```{r bary-body, echo = F, cache = T, out.width = '85%', fig.align="left", fig.asp = 0.55, dpi = 150}
 plot_bary_body
 ```
 ---
 
-# Přehled barů - heatmapa
+# Přehled barů – heatmapa
 --
 ```{r bary-dens, echo = F, cache = T, out.width = '85%', fig.align="left", fig.asp = 0.55, dpi = 150}
 plot_bary_dens
 ```
 ---
 
-# Přehled barů - grid
+# Přehled barů – grid
 --
 ```{r bary-grid, echo = F, cache = T, out.width = '85%', fig.align="left", fig.asp = 0.55, dpi = 150}
 plot_bary_grid
 ```
 ---
 
-# Přehled populace - části
+# Přehled populace – části
 --
 ```{r pop-casti, echo = F, cache = T, out.width = '85%', fig.align="left", fig.asp = 0.55, dpi = 150}
 plot_pop_casti
 ```
 ---
 
-# Přehled populace - grid
+# Přehled populace – grid
 --
 ```{r pop-grid, echo = F, cache = T, out.width = '85%', fig.align="left", fig.asp = 0.55, dpi = 150}
 plot_pop_grid
 ```
 ---
 
-# Přehled hotelových lůžek - části
+# Přehled hotelových lůžek – části
 --
 ```{r beds-casti, echo = F, cache = T, out.width = '85%', fig.align="left", fig.asp = 0.55, dpi = 150}
 plot_beds_casti
 ```
 ---
 
-# Přehled hotelových lůžek - grid
+# Přehled hotelových lůžek – grid
 --
 ```{r beds-grid, echo = F, cache = T, out.width = '85%', fig.align="left", fig.asp = 0.55, dpi = 150}
 plot_beds_grid
 ```
 ---
 
-# Přehled stanic metra - body
+# Přehled stanic metra – body
 --
 ```{r metro-body, echo = F, cache = T, out.width = '85%', fig.align="left", fig.asp = 0.55, dpi = 150}
 plot_metro_body
 ```
 ---
-# Přehled stanic metra - grid
+# Přehled stanic metra – grid
 --
 ```{r metro-grid, echo = F, cache = T, out.width = '85%', fig.align="left", fig.asp = 0.55, dpi = 150}
 plot_metro_grid
@@ -164,36 +164,48 @@ plot_metro_grid
 
 
 ---
-# Kvalita vegetace - raster
+# Kvalita vegetace – raster
 --
 ```{r ndvi-raster,echo = F, cache = T, out.width = '85%', fig.align="left", fig.asp = 0.55, dpi = 150}
 plot_vege_raster
 ```
 ---
 
-# Kvalita vegetace - grid
+# Kvalita vegetace – grid
 --
 ```{r ndvi-grid,echo = F, cache = T, out.width = '85%', fig.align="left", fig.asp = 0.55, dpi = 150}
 plot_vege_grid
 ```
 ---
 
-# Základní model
-```{r base-model,echo = F, cache = F, out.width = '85%', fig.align="left", fig.asp = 0.55, dpi = 150}
+# Baseline – 1 proměnná
+```{r baseline-model,echo = F, cache = F, out.width = '85%', fig.align="left", fig.asp = 0.55, dpi = 150}
+summary(bl_model)
+```
+
+--
+
+Na uživení hospody je potřeba: `r formatC(round(1/bl_model$coefficients["pop"]), big.mark = " ", decimal = 0)` místňáků v okolí `r plocha/1e6` kilometrů čtverečných.
+
+---
+
+# Jednoduchý model – 4 proměnné
+```{r simple-model,echo = F, cache = F, out.width = '85%', fig.align="left", fig.asp = 0.55, dpi = 150}
 summary(model)
 ```
+
 --
 
 Na uživení hospody je potřeba: buď `r formatC(round(1/model$coefficients["pop"]), big.mark = " ", decimal = 0)` místňáků, nebo `r formatC(round(1/model$coefficients["beds"]), big.mark = " ")` hotelových lůžek, v okolí `r plocha/1e6` kilometrů čtverečných.
 
 ---
-# Modifikovaný model
-```{r engineered-model, echo = F, cache = F, out.width = '85%', fig.align="left", fig.asp = 0.55, dpi = 150}
+# Složitější model – 4 + 2 proměnné
+```{r sophisticated-model, echo = F, cache = F, out.width = '85%', fig.align="left", fig.asp = 0.55, dpi = 150}
 summary(sl_model)
 ```
 
 ---
-# Závěrečná prezentace - rezidua v mapě
+# Závěrečná prezentace – rezidua v mapě
 
 ```{r leaflet-plot, echo = F, eval = T, cache = T, message = F, out.height='75%', out.width='100%'}
 
