--- a/prezka.Rmd
+++ b/prezka.Rmd
@@ -179,6 +179,7 @@ plot_vege_grid
 ---
 
 # Baseline – 1 proměnná
+--
 ```{r baseline-model,echo = F, cache = F, out.width = '85%', fig.align="left", fig.asp = 0.55, dpi = 150}
 summary(bl_model)
 ```
@@ -190,6 +191,7 @@ Na uživení hospody je potřeba: `r formatC(round(1/bl_model$coefficients["pop"
 ---
 
 # Jednoduchý model – 4 proměnné
+--
 ```{r simple-model,echo = F, cache = F, out.width = '85%', fig.align="left", fig.asp = 0.55, dpi = 150}
 summary(model)
 ```
@@ -200,6 +202,7 @@ Na uživení hospody je potřeba: buď `r formatC(round(1/model$coefficients["po
 
 ---
 # Složitější model – 4 + 2 proměnné
+--
 ```{r sophisticated-model, echo = F, cache = F, out.width = '85%', fig.align="left", fig.asp = 0.55, dpi = 150}
 summary(sl_model)
 ```
@@ -207,7 +210,7 @@ summary(sl_model)
 ---
 # Závěrečná prezentace – rezidua v mapě
 
-```{r leaflet-plot, echo = F, eval = T, cache = T, message = F, out.height='75%', out.width='100%'}
+```{r leaflet-plot, echo = F, eval = T, cache = F, message = F, out.height='75%', out.width='100%'}
 
 lplot
 
